--- a/src/layouts/components/sections/About.astro
+++ b/src/layouts/components/sections/About.astro
@@ -1,10 +1,10 @@
 ---
 import Subtitle from "@/layouts/components/widgets/Subtitle.astro";
-import type { Button, Section } from "@/types";
+import type { Button as ButtonData, Section } from "@/types";
 import { getEntryCTM } from "@/lib/contentParser.astro";
 import overrideObjects from "@/lib/utils/overrideObjects.ts";
 import { markdownify } from "@/lib/utils/textConverter";
-import ButtonLink from "../buttons/ButtonLink.astro";
+import Button from "../buttons/Button.astro";
 
 type aboutSectionType = Section & {
   layoutType?: "modern" | "creative";
@@ -14,8 +14,8 @@ type aboutSectionType = Section & {
     image?: string;
     descriptionFontSize?: "sm" | "lg";
     description: string;
-    ctaBtn: Button;
-    ctaBtn2?: Button;
+    ctaBtn: ButtonData;
+    ctaBtn2?: ButtonData;
   }[];
 };
 type Props = {
@@ -83,14 +83,14 @@ let {
                 {(item.ctaBtn?.enable || item.ctaBtn2?.enable) && (
                   <div class="flex flex-wrap items-center gap-4 pt-2">
                     {item.ctaBtn?.enable && (
-                      <ButtonLink
+                      <Button
                         class="text-center"
                         variant="secondary"
                         content={{ ...item.ctaBtn }}
                       />
                     )}
                     {item.ctaBtn2?.enable && (
-                      <ButtonLink
+                      <Button
                         class="text-center"
                         variant="secondary"
                         content={{ ...item.ctaBtn2 }}
