--- a/src/layouts/components/sections/HomeBanner.astro
+++ b/src/layouts/components/sections/HomeBanner.astro
@@ -1,15 +1,15 @@
 ---
 import overrideObjects from "@/lib/utils/overrideObjects.ts";
 import { markdownify } from "@/lib/utils/textConverter";
-import type { Button, Section } from "@/types";
+import type { Button as ButtonData, Section } from "@/types";
 import { getEntryCTM } from "@/lib/contentParser.astro";
-import ButtonLink from "../buttons/ButtonLink.astro";
+import Button from "../buttons/Button.astro";
 import AnimatedText from "../widgets/AnimatedText.astro";
 import OptimizedImage from "@/components/utilities/OptimizedImage.astro";
 import HeroBlobs from "@/components/hero/HeroBlobs.astro";
 
 type homeBannerSectionType = Section & {
-  button: Button;
+  button: ButtonData;
 };
 
 type Props = {
@@ -68,7 +68,7 @@ const background = "/images/hero/background.jpg";
         data-aos-delay="400"
         data-aos-duration="900"
         class="flex flex-wrap items-center justify-center gap-5">
-        {button && <ButtonLink content={button} variant="primary" />}
+        {button && <Button content={button} variant="primary" />}
       </div>
     </div>
   </div>
