--- a/src/layouts/components/global/CookieBanner.astro
+++ b/src/layouts/components/global/CookieBanner.astro
@@ -1,5 +1,6 @@
 ---
 import { getLocaleUrlCTM, useTranslations } from "@/lib/utils/i18nUtils";
+import Link from "@/layouts/components/links/Link.astro";
 
 const t = await useTranslations(Astro.currentLocale as string);
 ---
@@ -9,11 +10,11 @@ const t = await useTranslations(Astro.currentLocale as string);
   class="fixed right-4 bottom-4 left-4 z-[9999] hidden max-w-sm rounded-xl border border-white/20 bg-white p-5 text-gray-900 shadow-xl backdrop-blur md:right-6 md:left-auto">
   <p class="text-sm leading-relaxed">
     {t("cookie.message")}&nbsp;
-    <a
+    <Link
       href={getLocaleUrlCTM("/privacy-policy", Astro.currentLocale)}
       class="text-primary hover:text-primary/80 underline">
       {t("cookie.learnMore")}
-    </a>
+    </Link>
   </p>
 
   <div class="mt-4 flex justify-end gap-3">
