--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -12,7 +12,7 @@
   @apply prose-h6:text-h6;
   @apply prose-strong:text-secondary prose-strong:font-normal;
   @apply prose-pre:bg-white/5;
-  @apply prose-a:underline prose-a:transition prose-a:duration-300 prose-a:font-normal [&_a:hover]:no-underline;
+  @apply prose-a:underline prose-a:transition prose-a:duration-300 prose-a:font-normal;
   @apply prose-p:text-text-default prose-p:mt-2 prose-p:mb-3;
 
   @apply prose-hr:mt-0 prose-hr:mb-[1em] prose-hr:border-border-light;
