--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -25,7 +25,7 @@
   --color-mustard-50: rgba(207, 169, 71, 0.5);
 
   
-  --color-text-default: #C8C1C1;
+  --color-text-default: var(--color-text-shell-muted);
   --color-dark: #000E30;
 
   --color-blob: 0.61 0.06 205.6;
